--- a/ebook.tex
+++ b/ebook.tex
@@ -50,7 +50,7 @@
 
 
 %\AUTHOR \& \TITLE
-\author{Adriano Höhl, Silvia Ungarelli, \\Eduardo Cruz}
+\author{Adriano Höhl, Silvia Ungarelli, \\Eduardo Cruz, Luciano Curuci, André Tsai}
 \title{Acupuntura Médica em Questões}
 \date{\today}
 
@@ -78,11 +78,10 @@
 %CREATE HERE A TITLE PAGE AS YOU LIKE. My proposal is:
 %%%Moja Strona Tytulowa (do wyboru)
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
-<<<<<<< HEAD
+
 \makeglossary
-=======
 %\makeglossary
->>>>>>> 969745c551886f2ba63bf6cd8c75112e3a0576cc
+
 \makeindex
 
 \begin{document}
@@ -219,7 +218,7 @@ Eduardo Cruz
 \pagestyle{plain}
 
 
-\part{Provas do TEAC.} Questões resolvidas e comentadas.
+\part{Provas do TEAC} Questões resolvidas e comentadas.
 
 
 
@@ -5797,7 +5796,7 @@ b) O TENS (Estímulação Nervosa Elétrica Transcutânea) de alta frequência, 
 \textit{O TENS age nas fibras A$\beta$, com efeito  bem  inferior ao efeito da eletroacupuntura.} \\ 
 c) A eletroacupuntura estimula a liberação de neurotransmissores específicos, de acordo com o tipo de frequência utilizado.  \\
 \textit{Cada frequência terá relação direta na liberação de neurotransmissores. Eletroacupuntura de baixa frequência é considerada de 0,5 a 10 hz, eletroacupuntura de alta freqüência é considerada de 50hz a 2500 hz.Até  50 hz são consideradas dispersas e maiores de 50 hz são consideradas densas e de acordo com a emissão do pulso ela pode ser de modo contínuo quando a mesma frequência é utilizada do início ao fim. Modo Burst neste caso somente uma frequência será utilizada  tem tempo de estímulo e um  tempo de repouso,o acupuntriatra tem que escolher o tempo que está sendo estimulado e o tempo de repouso e o tempo total da aplicação. E o modo misto duas frequências são utilizadas. As  $\beta$endorfinas e encefálicas são liberados na frequência de 2 a 4hz. Dinorfinas são liberados na frequência mais elevada entre 50 e 100 hz, produz uma analgesia mais intensa porém de curta duração.} \\  
-d) O estímulo de ≥ 300 Hz está estabelecido como sendo o padrão de alta frequência a ser utilizado tanto na prática clínica quanto em estudos científicos.  \\
+d) O estímulo de $\eqslantgtr$ 300 Hz está estabelecido como sendo o padrão de alta frequência a ser utilizado tanto na prática clínica quanto em estudos científicos.  \\
 \textit{Para a eletroacupuntura usa-se na prática clínica a frequencia de até  100Hz, sendo acima desta frequência poder ser utilizada  em estudos científicos, ajustando-se para isto o comprimento de onda.} \\ 
   
 \textbf{A alternativa correta é a letra C.}\\
@@ -7402,16 +7401,45 @@ d) Orientar para a prática de exercícios regulares e mudança de hábitos alim
 \subsubsection{QUESTÃO 70}-Dentre as afirmativas abaixo, escolha a correta:\\ 
 
 a) O ponto E38 é o melhor para o tratamento de dor lombar aguda.\\ 
-\textit{No caso de dor lombar aguda, os pontos principais são B 23, B 40, pontos Ah Shi e DM 26 ou ID 6, SJ 6, DM 3, VB 34, B 32, Jia Ji, Yaotongxue e B 17. A puntura de VG 26 deve ser feita com estimulação forte, para cima, pedindo ao paciente movimentar-se. Poderá ser feito também B 40 com o paciente em pé. ID 6 (Ponto Xi) também é utilizado para tentar melhorar a mobilidade.  E 38 desobstrui o Canal, indicado para afecções do ombro (dor e rigidez), gastralgia, artrite do joelho, enterite e paralisia dos membros.}
-\\
+\textit{No caso de dor lombar aguda, os pontos principais são B 23, B 40, pontos Ah Shi e DM 26 ou ID 6, SJ 6, DM 3, VB 34, B 32, Jia Ji, Yaotongxue e B 17. A puntura de VG 26 deve ser feita com estimulação forte, para cima, pedindo ao paciente movimentar-se. Poderá ser feito também B 40 com o paciente em pé. ID 6 (Ponto Xi) também é utilizado para tentar melhorar a mobilidade.  E 38 desobstrui o Canal, indicado para afecções do ombro (dor e rigidez), gastralgia, artrite do joelho, enterite e paralisia dos membros.}\\
 b) O pneumotórax é uma complicação muito comum na prática da acupuntura. \\ 
 \textit{O pneumotórax é uma complicação que pode ocorrer quando da utilização de pontos na região torácica. Mesmo em mãos hábeis, o pneumotórax é uma complicação possível, mas não uma complicação comum. Para evitá-lo, o acupunturiatra deve sempre se atentar à anatomia local, usando como guia a palpação de estruturas ósseas tais como gradil costal, escápula e esterno, além de não usar agulhas de grande comprimento e observar o grau de aprofundamento e de inclinação da agulha.} \\ 
 c) O ponto BP 1 é contraindicado na gravidez. \\ 
 \textit{Quanto ao meridiano do BP, o ponto contraindicado na gestação é o BP 6 e não BP 1. PB 1 é indicado para cessar sangramentos, regular o Baço, liberar o tórax e os sentidos, tranquilizar Xin e o Shen. BP 6, indicado para tratamento das afecções ginecológicas, é o ponto de cruzamento dos três meridianos Yin do pé, concentrando, portanto, grande energia Yin, que poderia, segundo a MTC, promover o abortamento. Outros pontos mais comumente contraindicados na gestação são IG 4, B 60 e B 67.} \\
 d) Os pontos: VB 20, F 3, TA 17 e ID 19 e PC 6 são indicados na doença de Ménière. \\
-\textit{Os sintomas da Doença de Ménière incluem ataques súbitos, não provocados, de vertigem incapacitante severa, náusea e vômito. Esses sintomas geralmente duram de 1 a 6 horas, mas podem (raramente) durar 24 horas. Antes e durante o ataque, o paciente frequentemente tem a sensação de pressão no ouvido. A audição no ouvido afetado tende a oscilar, mas piora progressivamente com o passar dos anos. O zumbido pode ser constante ou intermitente e pode ser pior antes, durante, ou depois de uma crise de vertigem. Tanto a perda de audição quanto o zumbido geralmente afetam só um ouvido e a perda de audição é tipicamente maior nas frequências de sons mais baixas. O nistagmo é o grande elemento semiológico do labirinto. Sob a óptica da MTC, os fatores causais de vertigem incluem todas as síndromes de vento relacionadas ao Gan, deficiência de Qi do Jiao Superior e deficiência do mar de medula. F 3, principal ponto para movimentar o Qi do fígado, elimina o vento interno, estimula o fluxo do Qi do fígado, nutre o sangue e o Yin do fígado; TA 17, ponto de cruzamento com o canal de energia da VB, importante para tratamento de doenças do ouvido e problemas na ATM; ID 19, ponto de cruzamento com canais da VB e do TA, importante ponto local para doenças do ouvido. VB 20 expulsa o vento, beneficia os olhos e a cabeça, torna permeável o canal de energia. PC 6 (ponto Luo e ponto de abertura Yin Wei Mai) é o ponto muito importante para tratamento de náuseas e vômitos.} 
-\\
+\textit{Os sintomas da Doença de Ménière incluem ataques súbitos, não provocados, de vertigem incapacitante severa, náusea e vômito. Esses sintomas geralmente duram de 1 a 6 horas, mas podem (raramente) durar 24 horas. Antes e durante o ataque, o paciente frequentemente tem a sensação de pressão no ouvido. A audição no ouvido afetado tende a oscilar, mas piora progressivamente com o passar dos anos. O zumbido pode ser constante ou intermitente e pode ser pior antes, durante, ou depois de uma crise de vertigem. Tanto a perda de audição quanto o zumbido geralmente afetam só um ouvido e a perda de audição é tipicamente maior nas frequências de sons mais baixas. O nistagmo é o grande elemento semiológico do labirinto. Sob a óptica da MTC, os fatores causais de vertigem incluem todas as síndromes de vento relacionadas ao Gan, deficiência de Qi do Jiao Superior e deficiência do mar de medula. F 3, principal ponto para movimentar o Qi do fígado, elimina o vento interno, estimula o fluxo do Qi do fígado, nutre o sangue e o Yin do fígado; TA 17, ponto de cruzamento com o canal de energia da VB, importante para tratamento de doenças do ouvido e problemas na ATM; ID 19, ponto de cruzamento com canais da VB e do TA, importante ponto local para doenças do ouvido. VB 20 expulsa o vento, beneficia os olhos e a cabeça, torna permeável o canal de energia. PC 6 (ponto Luo e ponto de abertura Yin Wei Mai) é o ponto muito importante para tratamento de náuseas e vômitos.} \\
 \textbf{A alternativa correta é letra a D.}\\
+
+
+\chapter{TEAC 2020}TEAC 2020 
+
+\index{neurologia!mecanismo da acupuntura}
+\subsubsection{QUESTÃO 62}-Sobre os mecanismos de ação da acupuntura é correto afirmar: \\
+
+a) As principais fibras estimuladas pela inserção da agulha de acupuntura são as fibras A delta, grandes e amielinizadas, e as fibras do tipo C, que são fibras grandes e mielinizadas.\\
+\textit{A principal fibra estimulada pela inserção da agulha de acupuntura na pele é a fibra A $\delta$, pois o estímulo adequado é a picada da agulha enquanto a frequência da resposta é de 2 a 3 Hz, duas características das fibras A $\delta$ primárias (fibras mais superficiais). As fibras II/III correspondem às fibras sensoriais localizadas mais profundamente, isto é, fibras aferentes sensitivas no músculo esquelético, que, quando estimuladas pela acupuntura, desencadeiam os mesmos efeitos já descritos sobre a fibra A $\delta$.  As fibras A $\delta$ são de médio calibre e mielinizadas, sendo responsáveis pela vinculação da chamada primeira dor, ou dor aguda, e no caso da acupuntura, pela sensação de ferroada no momento de inserção da agulha. As fibras C, que são finas e amielínicas, respondem pela segunda dor, ou dor crônica e, no caso da acupuntura, relacionam-se às reações autonômicas que se seguem à inserção da agulha tais como a sensação de parestesia.} \\
+b) A analgesia segmentar se dá através da inibição da via nociceptiva aproximadamente no mesmo nível espinhal no corno dorsal, envolvendo a liberação de encefalina. \\
+\textit{A analgesia segmentar tem como objetivo utilizar pontos de acupuntura que têm uma relação neuroanatômica com os segmentos afetados. Em geral, esses pontos localizam-se no dermátomo, miótomo ou esclerótomo do segmento afetado, considerando-se o princípio da convergência, que se refere à chegada de aferências viscerais e somáticas em níveis comuns do corno posterior da medula. As fibras A $\delta$ respondem pela chamada primeira dor, ou dor aguda, cujo estímulo dura apenas alguns segundos; as fibras C, por sua vez, são responsáveis pela segunda dor ou dor crônica. Portanto, a grande totalidade das disfunções álgicas persistentes são vinculadas às fibras C. A ação da acupuntura nesse nível inibe os estímulos que chegam ao corno posterior da medula pelas fibras C e transmitem a sensação dolorosa. Após a inserção da agulha de acupuntura e o desencadeamento do efeito periférico, o estímulo transmitido às fibras A $\delta$ chega ao corno posterior da medula, mais precisamente na lâmina I de Rexed e, através de interneurônios, alcança a lâmina II, sede da Substância Gelatinosa (SG), região rica em células pedunculadas, que nada mais são que interneurônios produtores de encefalina, um neurotransmissor inibitório, e é nessa estrutura que funciona o chamado portão da dor. O estímulo da agulha, através das fibras A $\delta$, faz com que os neurônios encefalinérgicos inibitórios da SG entrem em ação e produzam a encefalina. Esta, por sua vez, migrará, indo atuar tanto na lâmina II quanto na V, onde chega através dos interneurônios, inibindo as células de Ampla Variação Dinâmica (AVD), bloqueando, assim, a passagem do estímulo das fibras C do primeiro para o segundo neurônio da via da dor, com consequente minimização da sensação dolorosa. Sendo assim, o neurotransmissor encefalina figura como principal neurotransmissor no mecanismo segmentar da acupuntura.} \\
+c) Um dos efeitos locais da acupuntura é a liberação de neuropeptídeos como o peptídeo relacionado ao gene da calcitonina (CGRP), que causa uma vasoconstrição local gerando a vermelhidão típica da intervenção acupunturiátrica. \\
+\textit{Um neuropeptídio, em particular, estudado em associação com a acupuntura, é o peptídeo relacionado ao gene da calcitonina (CGRP), que é um constituinte normal do nervo sensorial, sendo sintetizado no gânglio da raiz dorsal e transportado para a periferia. Uma das suas funções é nutrir, promover a vasodilatação (o que explica o fenômeno do reflexo axônico – vermelhidão ao redor do ponto de inserção da agulha) e neogênese de vasos sanguíneos, o que facilita o reparo após uma lesão local.} \\
+d) O DNIC (controle inibitório nocivo difuso) por ser mais abrangente tem um efeito igual ou até melhor que a acupuntura clássica. \\
+\textit{Os controles inibitórios difusos por agentes nocivos (DNIC) consiste em um poderoso sistema que suprime a dor, descrito por Le Bars e colaboradores, em 1979, estando envolvido com o efeito curta duração da acupuntura. Após inúmeras pesquisas, esse grupo demonstrou que o DNIC é um mecanismo opioidérgico que age nos neurônios de AVD, localizados na lâmina V de Rexed. O estímulo evocado pela acupuntura nas fibras A $\delta$ é enviado ao subnúcleo reticular dorsal, localizado na região caudal da medula oblonga (bulbo), de onde a informação se projeta para baixo, por meio do funículo dorsolateral (FDL), até o corno dorsal da medula em todos os seus níveis. Apesar de o mecanismo do DNIC ser opioidérgico, ele envolve estruturas e ações diferentes daquelas evocadas pelos mecanismos de ação periférico, segmentar e suprassegmentar da acupuntura clássica, se somando e não se sobrepondo a essa última técnica.} \\
+\textbf{A alternativa correta é letra a B.}\\
+
+
+
+\index{neurologia!mecanismo da acupuntura}
+\subsubsection{QUESTÃO 67}-Acerca do efeito cumulativo da acupuntura é verdadeiro afirmar:
+
+a)Foi comprovado através de ensaios clínicos que esse efeito se deve a uma maior liberação de neurotransmissores como noradrenalina e serotonina. \\
+\textit{O efeito cumulativo da acupuntura se deve em parte pelo aumento da concentração de peptídeos opioides que se seguem a cada sessão, e não por uma maior liberação de noradrenalina e serotonina, que são aminas biogênicas e não neurotransmissores opioides.} \\
+b) Possivelmente ele estaria relacionado à melhora da expressão genética proporcionada pelo estímulo repetitivo à liberação dos peptídeos opioides. \\
+\textit{O estímulo repetitivo da acupuntura promove modificações permanentes nas fibras A$\delta$ e nas fibras C, mediadas pelo gene c-fos, caracterizando assim, um efeito de neuroplasticidade. Sob ação de sessões repetidas de acupuntura, cujas informações são carreadas até o Sistema Nervoso Central através das fibras A$\delta$, ocorrem fenômenos intracelulares que estimulam o gene c-fos a produzir a proteína c-fos. A proteína c-fos se une a outra proteína, c-jus, dando origem ao zíper de leucina, que por sua vez atua no DNA da célula, modificando-o e criando uma nova memória genética e, consequentemente, uma melhor expressão gênica. A partir daí a célula torna-se capaz de produzir uma maior quantidade de neurotransmissores, de receptores, de canais de transporte de íons e de fator de crescimento neurotrófico, fazendo com que a resposta neuronal sob o estímulo da acupuntura se potencialize a cada sessão.} \\
+c) A Beta endorfina seria responsável por potencializá-lo.\\
+\textit{O efeito cumulativo da acupuntura se deve em parte pelo aumento da concentração de peptídeos opióides que se seguem a cada sessão, a partir da formação de uma memória genéticas nas células envolvidas no mecanismo de ação da acupuntura. Para que o efeito cumulativo aconteça, é necessário que o médico acupunturiatra obedeça aos parâmetros clínicos necessários para se evitar o fenômeno na neuro acomodação ou tolerância. A $\beta$ endorfina, por ser um opióide envolvido no mecanismo de ação da acupuntura não funciona como potencializador do efeito cumulativo da acupuntura e sim como um subproduto desse.} \\
+d) O intervalo ideal entre as aplicações para se obter a somação dos efeitos da acupuntura deve girar entre 01 a 02 dias.\\
+\textit{O intervalo ideal entre as aplicações para se obter o efeito cumulativo da acupuntura varia de acordo com o estado clínico do paciente e com a natureza e gravidade da doença. Para casos agudos, as sessões podem ser realizadas em dias alternados e já para os casos crônicos, o intervalo entre uma sessão e outra pode ser maior (até 7 dias). Conforme a evolução clínica, determina-se maior ou menor frequência das sessões. Deve-se ressaltar que, tanto o tempo de duração da sessão como um intervalo abaixo do ideal para o efeito cumulativo da acupuntura podem levar à tolerância, fenômeno em que o paciente passa a não responder ao tratamento prescrito.} \\
+\textbf{A alternativa correta é letra a B.}\\
 
 
 
