Desgrudando os títulos das tabelas

--- a/ebook.tex
+++ b/ebook.tex
@@ -7471,6 +7471,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 			{\renewcommand\arraystretch{1.25}
 					\caption{Seleção de pontos}(Na terceira coluna marcar $\surd$ ou X casa tenha acertado ou errado a posição do acuponto.)
+					\vspace{0.5cm}
 				
 					\begin{tabular}{ l l l }
 						\cline{1-1}\cline{2-2}\cline{3-3}
@@ -7533,6 +7534,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -7595,6 +7597,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -7657,6 +7660,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -7719,6 +7723,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -7781,6 +7786,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -7843,6 +7849,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -7905,6 +7912,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -7968,6 +7976,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8031,6 +8040,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8093,6 +8103,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8155,6 +8166,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8218,6 +8230,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8281,6 +8294,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8343,6 +8357,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de pontos}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8417,6 +8432,7 @@ Neste capitulo encontram-se   planilhas de  simulações de  sequencias de ponto
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Aurículo Chinesa}(Na terceira coluna marcar $\surd$ ou X casa tenha acertado ou errado a posição do Ponto de Auriculoterapia Chinesa)
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8454,6 +8470,7 @@ Neste capitulo encontram-se   planilhas de  simulações de  sequencias de ponto
 	\centering
 {\renewcommand\arraystretch{1.25}
 	\caption{Seleção de Pontos de Auriculoterapia Chinesa}
+	\vspace{0.5cm}
 	
 	\begin{tabular}{ l l l }
 		\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8490,6 +8507,7 @@ Neste capitulo encontram-se   planilhas de  simulações de  sequencias de ponto
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de Pontos de Auriculoterapia Chinesa}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8526,6 +8544,7 @@ Neste capitulo encontram-se   planilhas de  simulações de  sequencias de ponto
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de Pontos de Auriculoterapia Chinesa}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8562,6 +8581,7 @@ Neste capitulo encontram-se   planilhas de  simulações de  sequencias de ponto
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de Pontos de Auriculoterapia Chinesa}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8598,6 +8618,7 @@ Neste capitulo encontram-se   planilhas de  simulações de  sequencias de ponto
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de Pontos de Auriculoterapia Chinesa}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8635,6 +8656,7 @@ Neste capitulo encontram-se   planilhas de  simulações de  sequencias de ponto
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de Pontos de Auriculoterapia Chinesa}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8671,6 +8693,7 @@ Neste capitulo encontram-se   planilhas de  simulações de  sequencias de ponto
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de Pontos de Auriculoterapia Chinesa}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
@@ -8707,6 +8730,7 @@ Neste capitulo encontram-se   planilhas de  simulações de  sequencias de ponto
 	\centering
 	{\renewcommand\arraystretch{1.25}
 		\caption{Seleção de Pontos de Auriculoterapia Chinesa}
+		\vspace{0.5cm}
 		
 		\begin{tabular}{ l l l }
 			\cline{1-1}\cline{2-2}\cline{3-3}
