Acrescentando arquivos de 2020,apos desastre

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -3,8 +3,7 @@
 	title={Os fundamentos da medicina chinesa: um texto abrangente para acupunturistas e fitoterapeutas},
 	author={Maciocia, Giovanni},
 	booktitle={Os fundamentos da medicina chinesa: um texto abrangente para acupunturistas e fitoterapeutas},
-	publisher={Editora Roca}
-	pages={658--658},
+	publisher={Editora Roca},
 	year={1996}
 }
 @book{yamamura2001acupuntura,
@@ -30,7 +29,7 @@
 	title={Acupuntura m{\'e}dica: um enfoque cient{\'\i}fico do ponto de vista ocidental},
 	author={Filshie, J and White, A},
 	journal={S{\~a}o Paulo: Roca},
-	publisher={Editora Roca}
+	publisher={Editora Roca},
 	volume={12},
 	year={2002}
 }
@@ -38,7 +37,7 @@
 	title={Introdu{\c{c}}{\~a}o {\`a} acupuntura m{\'e}dica ocidental},
 	author={White, A and Cummings, M and FILSHIE, J},
 	journal={S{\~a}o Paulo: Roca},
-	publisher={Editora Roca}
+	publisher={Editora Roca},
 	year={2013}	
 }
 @book{yamamura2001acupuntura,
@@ -52,8 +51,13 @@
 	title={Acupuntura e Medicina Tradicional Chinesa},
 	author={HSING,Wu Tu and TSAI, Andr{\'e} Wan Wen},
 	journal={S{\~a}o Paulo: Atheneu},
-	year={2019}
-	
+	year={2019}	
+}
+@article{bittar2014manual,
+	title={Manual de Acupuntura},
+	author={BITTAR, Jo{\~a}o Paulo Maneira},
+	journal={S{\~a}o Paulo: Atheneu},
+	year={2014}
 }
 
 
