--- a/ebook.tex
+++ b/ebook.tex
@@ -9574,21 +9574,21 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\item Diretor Clínico da Höhlklinik
 \end{itemize}
 
-
+\newpage
 \textbf{{\Large Silvia de Paula Ungarelli}}
 \begin{itemize}
 	\item Graduação em Medicina pela Faculdade de Medicina da Universidade Federal de Goiás.
 	\item Especialista em Acupuntura pelo Colégio Médico Brasileiro de Acupuntura e Associação Médica Brasileira.
 \end{itemize} 
-
+\newpage
 \textbf{{\Large Eduardo Pereira Cruz}}
 \begin{itemize}
 	\item Graduação em Medicina pela Faculdade de Medicina da Universidade Federal de Goiás.
 	\item Especialista em Ginecologia e Obstetrícia pelo Hospital das Clinicas da Universidade Federal de Goiás.
 	\item Especialista em Acupuntura pelo Colégio Médico Brasileiro de Acupuntura e Associação Médica Brasileira.
 \end{itemize}
-
-\textbf{{\Large Luciano Ricardo Curuci de Souza}}
+\newpage
+\textbf{{\large Luciano Ricardo Curuci de Souza}}
 \begin{itemize}
 	\item Graduado em Medicina pela Faculdade de Ciências Médicas de Santos (UNILUS)
 	\item Especialista em Acupuntura Médica pelo Colégio Médico Brasileiro de Acupuntura e Associação Médica Brasileira
@@ -9596,7 +9596,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\item Especialista em Dor pela Associação Médica Brasileira
 	\item Membro da Câmara Técnica de Acupuntura do CREMESP
 \end{itemize}
-
+\newpage
 \textbf{{\Large André Wan Wen Tsai}}
 \begin{itemize}
 	\item Graduado em Medicina pela Faculdade de Medicina da Universidade de São Paulo (FMUSP) em 1999
@@ -9608,7 +9608,7 @@ Neste capítulo encontram -se  planilhas de  simulações de  sequencias de pont
 	\item Curso de Pesquisa Clínica pela Havard Medical School em 2008
 	\item Título de Especialista em Dor pela Associação Médica Brasileira (AMB) desde 2012
 	\item Docente do Centro de Acupuntura do Instituto de Ortopedia e Traumatologia do HC-FMUSP desde 2007
-	\item Vice- supervisor do programa de Residência Médica em Acupuntura do HC-FMUSP desde 2010
+	\item Vice-supervisor do programa de Residência Médica em Acupuntura do HC-FMUSP desde 2010
 	\item Diretor de relações Institucionais do Colégio Médico de Acupuntura de São Paulo (CMAeSP), gestão 2012-15
 	\item Diretor de proteção ao paciente do Colégio Médico Brasileiro de Acupuntura (CMBA), gestão 2014-17.
 	\item Presidente do Colégio Médico de Acupuntura de São Paulo gestão 2015-2021
