--- a/ebook.tex
+++ b/ebook.tex
@@ -13,12 +13,12 @@
 \usepackage{ucs}
 \usepackage{graphicx} % images
 \usepackage[bookmarks=true,colorlinks=true,pdftex]{hyperref} %hyperlinks
-\usepackage{amsmath}
+%\usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
-\usepackage{indentfirst}
+%\usepackage{indentfirst}
 \usepackage{natbib}
-\usepackage{makeidx}
+%\usepackage{makeidx}
 %\usepackage{calc} % przeliczanie pozycji
 %\usepackage{amsmath} % matematyczne symbole
 %\usepackage{longtable} % dla dlugich tabel
@@ -28,7 +28,7 @@
 
 %FONTS my proposal is TeXGyre
 %\usepackage{tgtermes} %times like
-\usepackage{tgcursor} %courier like
+%\usepackage{tgcursor} %courier like
 %\usepackage{tgschola} %schoolbook like
 %\usepackage{tgpagella} %palatin like
 %\usepackage{tgchorus} %itc zapf chancery like
@@ -154,14 +154,25 @@
 \chapter*{Dedicatórias}
 
 
-\textit{Dedico este livro a minha esposa Ana Lúcia, a minha mãe Luzia e a meus filhos Laura e Luisa, Adriano Filho e  Mariana.} \\
+\textit{Dedico este livro à minha esposa Ana Lúcia, à minha mãe Luzia e a meus filhos Laura, Luisa, Adriano Filho e Mariana.} \\
 
 \begin{flushright}
 	\textit{Adriano Höhl} \\
 \end{flushright}
 
 \newpage
-\textit{Dedico este livro a minha esposa Tânia Mara, aos meus filhos Gabriel, Eduardo e Hugo.} \\
+
+
+\textit{Dedico este livro à minha querida família} \\
+
+\begin{flushright}
+	\textit{Silvia Ungarelli} \\
+\end{flushright}
+
+\newpage
+\textit{Dedico este livro à minha esposa Tânia Mara, aos meus filhos Gabriel, Eduardo Filho e Hugo.} \\
+
+\textit{Agradeço ao meu sobrinho Matheus Carvalho que fez a capa e nos ajudou com a diagramação.}
 
 
 \begin{flushright}
@@ -177,7 +188,7 @@
 \end{flushright}
 
 \newpage
-\textit{Dedicamos este livro a todos os Colegas , Monitores e professores do V Curso de Acupuntura do CMA-Goiás.} 
+\textit{Dedicamos este livro a todos os Colegas, Monitores e professores do V Curso de Acupuntura do CMA-Goiás.} 
 \begin{flushright}
 	\textit{Adriano, Eduardo e Silvia}
 \end{flushright}
@@ -271,7 +282,7 @@ Agradeço o apoio de minha família e à Deus pelas oportunidades que surgem e p
 \textit{$\ast$Terra do Imperador Amarelo- nome que embalou as comemorações da conquista do TEAC em referência ao estado de Goiás, com camiseta ilustrando o pequi, fruta típica do Cerrado, que é de cor amarela.} \\
 
 	\begin{flushright}
-		\textit{Fábio Azevedo de Almeida}
+		\textit{Fábio Azevedo de Almeida}\footnote{Presidente do Colégio Médico de Acupuntura-GO}
 	\end{flushright}
 	
 \chapter*{Apresentação}
