--- a/ebook.tex
+++ b/ebook.tex
@@ -51,7 +51,7 @@
 
 %\AUTHOR \& \TITLE
 \author{Adriano Höhl, Silvia Ungarelli, \\Eduardo Cruz, Luciano Curuci, André Tsai}
-\title{Acupuntura Médica em Questões}
+\title{Acupunturiatria em Questões}
 \date{\today}
 
 
